prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_literal_float_to_int.diag.txt
ERROR: expression of type 'float' cannot be assigned to type 'int'
testData/diagnostics/compilation_errors/type_inference/test_literal_float_to_int.nut:2:0

// EXPECTED: compile-time error - float literal assigned to int variable
local x: int = 3.14
^------------------
return x


